	is already being cleaned up automatically once the program exists.
	* src/Makefile.am, src/gtk-gui/Makefile.am: Removed linking with the
	Xmu library, since we don't seem to use it anywhere.
	* src/*: Cleaned up most occurances of "using namespace std;". Also
	made sure that each module includes its own header first, in order to
	ensure that no header silently depends on another header to be
	included first.
	* src/Game.h: Removed definition of max since it conflicts with the
	definition of std::max.
	* src/sstream.h: Removed this file since it was only solving a
	compatibility issue for old versions of MSVC. Modern compilers should
	support the sstream header fine.
	* configure.ac, enet/*: Updated enet to the 1.0 release.
	* src/obj_sign.cxx: Still define a static MAX because ANSI C++ doesn't
	support dynamic arrays on the stack.
	* src/gtk-gui/modeparser.cxx: Introduced a const_cast to work around a
	compiler warning. Is probably bad practice, should be checked.
	* src/gtk-gui/persist.cxx: Fixed compile errors related to std
	namespace caused by the earlier cleanup.
	* src/stamp-h.in, src/config.h.in: Removed these dynamically generated
	files.
	* INSTALL: Updated.
	* mkinstalldirs: Removed this generated file.
	* src/Makefile.am: Removed "-lGL -lGLU -lglut" since they are
	automatically added because they are checked in configure.ac.
	* configure.ac, cracksplash.glade, data/Makefile.am, src/Game.h,
	src/GarbageFlavorImage.cxx, src/Makefile.am, src/String.cxx,
	src/TextureLoader.cxx, src/TextureLoader.h, src/obj_clock.cxx,
	src/obj_external_candy.cxx, src/obj_garbage.cxx, src/obj_messages.cxx,
	src/obj_sign.cxx: Images are now loaded using SDL_image, so that
	not only uncompressed TGA is supported but many formats.
	* COPYRIGHT: Added my email address.
	* data/Makefile.am, data/*.tga, data/*.png,
	windows/package_script.nsi: Converted all textures from TGA to PNG,
	reducing the size of the game by about 3.5 MB.
