@@ -2,6 +2,8 @@ pkgdata_DATA = crackattackcubehires.obj \
 	       crackattackcubemedres.obj \
 	       crackattackcubehires_simplified.obj \
 	       crackattackcubemedres_tex.obj \
-	       crackattackcubehires_tex.obj
+	       crackattackcubehires_tex.obj \
+	       cube.obj \
+	       cube.mtl
 
 EXTRA_DIST = ${pkgdata_DATA}
