@@ -1,0 +1,44 @@
+# A cube
+# By Bjorn Lindeijer
+
+o cube
+
+mtllib cube.mtl
+
+v 1.000000 1.000000 1.000000
+v 1.000000 1.000000 -1.000000
+v 1.000000 -1.000000 1.000000
+v 1.000000 -1.000000 -1.000000
+v -1.000000 1.000000 1.000000
+v -1.000000 1.000000 -1.000000
+v -1.000000 -1.000000 1.000000
+v -1.000000 -1.000000 -1.000000
+
+vn 1.000000 0.000000 0.000000
+vn -1.000000 0.000000 0.000000
+vn 0.000000 1.000000 0.000000
+vn 0.000000 -1.000000 0.000000
+vn 0.000000 0.000000 1.000000
+vn 0.000000 0.000000 -1.000000
+
+vt 0.000000 0.000000
+vt 0.000000 1.000000
+vt 1.000000 0.000000
+vt 1.000000 1.000000
+
+g cube_faces
+
+usemtl bjorn_foto
+
+f 5/1/5 7/2/5 1/3/5
+f 1/3/5 7/2/5 3/4/5
+f 1/1/1 3/2/1 2/3/1
+f 2/3/1 3/2/1 4/4/1
+f 2/1/6 4/2/6 6/3/6
+f 6/3/6 4/2/6 8/4/6
+f 6/1/2 8/2/2 5/3/2
+f 5/3/2 8/2/2 7/4/2
+f 6/1/3 5/2/3 2/3/3
+f 2/3/3 5/2/3 1/4/3
+f 8/1/4 7/2/4 4/3/4
+f 4/3/4 7/2/4 3/4/4
